RESOLVED FIXED301512
REGRESSION(300938@main): [GTK] [2.51.1] Fails to build on i386: redefinition of 'a' with a different type: 'const char *' vs 'const Latin1Character *' (aka 'const unsigned char *')
https://bugs.webkit.org/show_bug.cgi?id=301512
Summary REGRESSION(300938@main): [GTK] [2.51.1] Fails to build on i386: redefinition ...
Alberto Garcia
Reported 2025-10-27 06:46:24 PDT
This is with clang 19: FAILED: Source/WTF/wtf/CMakeFiles/WTF.dir/BloomFilter.cpp.o In file included from /build/reproducible-path/webkit2gtk-2.51.1/Source/WTF/wtf/BloomFilter.cpp:27: In file included from /build/reproducible-path/webkit2gtk-2.51.1/Source/WTF/wtf/BloomFilter.h:30: In file included from /build/reproducible-path/webkit2gtk-2.51.1/Source/WTF/wtf/text/AtomString.h:24: In file included from /build/reproducible-path/webkit2gtk-2.51.1/Source/WTF/wtf/text/AtomStringImpl.h:24: In file included from /build/reproducible-path/webkit2gtk-2.51.1/Source/WTF/wtf/text/UniquedStringImpl.h:28: In file included from /build/reproducible-path/webkit2gtk-2.51.1/Source/WTF/wtf/text/StringImpl.h:44: /build/reproducible-path/webkit2gtk-2.51.1/Source/WTF/wtf/text/StringCommon.h:249:17: error: redefinition of 'a' with a different type: 'const char *' vs 'const Latin1Character *' (aka 'const unsigned char *') 249 | const char* a = byteCast<char>(a); | ^ /build/reproducible-path/webkit2gtk-2.51.1/Source/WTF/wtf/text/StringCommon.h:244:49: note: previous definition is here 244 | ALWAYS_INLINE bool equal(const Latin1Character* a, std::span<const Latin1Character> b) | ^ There are several other related errors, see here for full details: https://buildd.debian.org/status/fetch.php?pkg=webkit2gtk&arch=i386&ver=2.51.1-1&stamp=1761493485&raw=0
Attachments
Michael Catanzaro
Comment 1 2025-10-29 12:33:37 PDT
Alberto Garcia
Comment 2 2025-10-29 16:07:26 PDT
I confirm that the x86 build succeeds with this patch, thanks!
EWS
Comment 3 2025-10-30 08:09:17 PDT
Committed 302344@main (2a2707faa14a): <https://commits.webkit.org/302344@main> Reviewed commits have been landed. Closing PR #53159 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.