[GTK] [2.51.1] Fails to build on i386: redefinition of 'a' with a different type: 'const char *' vs 'const Latin1Character *' (aka 'const unsigned char *') https://bugs.webkit.org/show_bug.cgi?id=301512

Unreviewed build fix.

Unfortunately I renamed the parameters to exactly the same names as the
local variables. I prefer to not rename the parameters again, since
these are the best names for the other architectures, so let's change
the locals instead.

Canonical link: https://commits.webkit.org/302344@main